--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
     </div>
 
     <div class="carousel-inner">
@@ -157,7 +158,7 @@
 </div>
 
 <!-- About Us -->
-    <section id="AboutComp" class="pt-5">
+    <section id="AboutComp">
         <div class="container-lg my-5">
             <h5 id="AboutCompHeader" style="color: #E8AB42;">ABOUT OUR COMPANY</h5>
             <h2 id="AboutCompHeader2">ETR Total Business Solutions Provider</h2>
@@ -191,5 +192,70 @@
         </div>
     </section>
 
+        <!-- What we do -->
+
+    <section class="WhatWeDo">
+        <div class="container-lg my-5">
+            <!--<h2 id="OurSoftware">OUR SOFTWARE</h2>-->
+            <h2 id="SoftwarePackages" style="color: #E8AB42;">These are the software packages</h2>
+            <div class="row justify-content-center">
+                
+                <div class="col-md-4 col-sm-6">
+                    <div class="Group1">
+                        <i class="bi bi-terminal" id="ETRBS"></i>
+                        <h4 id="DCM">ETR Field Force</h4>
+                        <p id="DCMP">A complete software solution that combines finance, HR, supply chain, and customer management to improve how businesses work. 
+                            It helps them share information better, make smarter decisions, and can be adjusted to fit different industries.</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="Group1">
+                        <i class="bi bi-code-square" id="ETRBS"></i>
+                        <h4 id="ETRIS">ETR Analytics</h4>
+                        <p id="ETRSP">Brings together finance, HR, supply chain, and customer management to work better together, saving time and improving teamwork. 
+                            With smart analysis and flexible options, it fits any industry and grows with your business.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="Group1">
+                        <i class="bi bi-phone" id="ETRBS"></i>
+                        <h4 id="SPMS">SPMS</h4>
+                        <p id="SPMSP">Boosts sales by keeping track of what works best and rewarding good performance. 
+                            It makes selling easier by setting goals, measuring progress, and showing results instantly, helping businesses hit their sales goals faster.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6" >
+                    <div class="Group1">
+                        <i class="bi bi-card-text" id="ETRBS"></i>
+                        <h4 id="POS">POS</h4>
+                        <p id="POSP">Handles sales, inventory, and payments smoothly, making customers happy and work easier. 
+                            It connects with different payment methods and shows instant sales info, helping businesses work better and make more money.
+                        </p>
+                    </div>
+                </div>
+
+                <!--<div class="col-md-4 col-sm-6">
+                    <div class="Group1">
+                        <i class="bi bi-gear"></i>
+                        <h4 id="SPA">Sales Performance Analysis</h4>
+                        <p class="SPAP">Gain valuable insights into your sales team's effectiveness and efficiency. Optimize strategies to maximize revenue and growth.</p>
+                    </div>
+                </div>-->
+                <div class="col-md-4 col-sm-6">
+                    <div class="Group1">
+                        <i class="bi bi-braces" id="ETRBS"></i>
+                        <h4 id="CS">Customized Software</h4>
+                        <p id="CSP">Customized for your business, these solutions give you what you need, when you need it. 
+                            They help you work better, save time, and do things your way, even when standard software can't.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    
 </body>
 </html>
