--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="system.css">
         <link rel="stylesheet" href="about.css">
         <link rel="stylesheet" href="system-responsive.css">
+        <link rel="stylesheet" href="services.css">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     </head>
 
@@ -235,14 +236,6 @@
                         </p>
                     </div>
                 </div>
-
-                <!--<div class="col-md-4 col-sm-6">
-                    <div class="Group1">
-                        <i class="bi bi-gear"></i>
-                        <h4 id="SPA">Sales Performance Analysis</h4>
-                        <p class="SPAP">Gain valuable insights into your sales team's effectiveness and efficiency. Optimize strategies to maximize revenue and growth.</p>
-                    </div>
-                </div>-->
                 <div class="col-md-4 col-sm-6">
                     <div class="Group1">
                         <i class="bi bi-braces" id="ETRBS"></i>
@@ -255,7 +248,139 @@
             </div>
         </div>
     </section>
+        <!-- Our Services -->
+
+    <section class="ETRServices" id="ETRServicesID">
+        <div class="container-lg my-5">
+            <div class="row justify-content-center">
+                <div class="col-md-12">
+                    <h1 id="OurServices">OUR SERVICES</h1>
+                    <p id="WeDealWithAspects">We deal with the aspects of professional IT Services</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-4 col-sm-6">
+                    <div class="Services1">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24" id="SSIcon">
+                            <path fill="black" d="M14 18.32A7.06 7.06 0 0 1 11.28 16H3V4h18v2.26a7.08 7.08 0 0 1 2 2.15V4a2 2 0 0 0-2-2H3a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h7v2H8v2h8v-2h-2Z"/>
+                            <path fill="black" d="M17 6a6 6 0 1 0 6 6a6 6 0 0 0-6-6m0 7.5a1.5 1.5 0 1 1 1.5-1.5a1.5 1.5 0 0 1-1.5 1.5"/>
+                        </svg>
+                        <h4 id="AppDevh4">Software Services</h4>
+                        <p id="AppDevPServices">We specialize in crafting customized solutions to address the unique needs of businesses, enhancing both efficiency and functionality. 
+                            Our approach focuses on streamlining processes, optimizing productivity, and empowering our clients to achieve their distinct objectives effectively.</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="Services1">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24" id="TSIcon">
+                            <path fill="currentcolor" stroke="black" stroke-width="2" d="M6 9a3 3 0 1 0 0-6a3 3 0 0 0 0 6Zm0-6V0m0 12V9M0 6h3m6 0h3M2 2l2 2m4 4l2 2m0-8L8 4M4 8l-2 2m16 2a3 3 0 1 0 0-6a3 3 0 0 0 0 6Zm0-6V3m0 12v-3m-6-3h3m6 0h3M14 5l2 2m4 4l2 2m0-8l-2 2m-4 4l-2 2m-5 8a3 3 0 1 0 0-6a3 3 0 0 0 0 6Zm0-6v-3m0 12v-3m-6-3h3m6 0h3M5 14l2 2m4 4l2 2m0-8l-2 2m-4 4l-2 2"/>
+                        </svg>
+                        <h4 id="AppDevh4">Technical Services</h4>
+                        <p id="AppDevPServices">We offer expert support for a variety of technological needs, such as IT assistance, system maintenance, and troubleshooting. 
+                            Our skilled technicians prioritize providing prompt and reliable solutions to ensure that our clients' systems run smoothly and securely.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="Services1">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24" id="EMIcon">
+                            <path fill="black" d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2m0 4l-8 5l-8-5V6l8 5l8-5z"/>
+                        </svg>
+                        <h4 id="AppDevh4">Email Maintenance</h4>
+                        <p id="AppDevPServices">We oversee email maintenance, ensuring smooth and secure operations. 
+                            Our services include monitoring, troubleshooting, and security enhancements to optimize communication reliability and safeguard against threats.</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="Services1" id="threelayers">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24" id="CHMIcon">
+                            <path fill="black" d="m21.71 20.29l-1.42 1.42a1 1 0 0 1-1.41 0L7 9.85A3.8 3.8 0 0 1 6 10a4 4 0 0 1-3.78-5.3l2.54 2.54l.53-.53l1.42-1.42l.53-.53L4.7 2.22A4 4 0 0 1 10 6a3.8 3.8 0 0 1-.15 1l11.86 11.88a1 1 0 0 1 0 1.41M2.29 18.88a1 1 0 0 0 0 1.41l1.42 1.42a1 1 0 0 0 1.41 0l5.47-5.46l-2.83-2.83M20 2l-4 2v2l-2.17 2.17l2 2L18 8h2l2-4Z"/>
+                        </svg>
+                        <h4 id="AppDevh4">Computer Hardware Maintenance</h4>
+                        <p id="AppDevPServices">
+                            We maintain and optimize computer hardware for peak performance and reliability. 
+                            Our services include monitoring, troubleshooting, and timely support for upgrades and security.</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="Services1" id="threelayers">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24" id="SMIcon">
+                            <path fill="black" d="M10.424 16.5h5.12v-6h4.448a9.004 9.004 0 1 0-6.458 9.11Zm-1.908-5.526a2.5 2.5 0 1 1 2.5 2.5a2.5 2.5 0 0 1-2.5-2.5"/>
+                            <path fill="black" d="M22.045 18h-3v-6h-2v6h-3l4 4z"/>
+                        </svg>
+                        <h4 id="AppDevh4">Software Maintenance</h4>
+                        <p id="AppDevPServices">
+                            We ensure the smooth operation and security of software systems through regular updates and timely support for troubleshooting and upgrades.</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="Services1" id="threelayers">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24" id="CCTVIcon">
+                            <path fill="black" d="m6.03 12.03l2 3.47l-2.53 3.18L2 12.62zM17 18v-2.71c.88-.39 1.5-1.26 1.5-2.29c0-.57-.2-1.1-.53-1.5l1.97-1.15c1.01-.59 1.36-1.88.77-2.89l-1.38-2.4a2.125 2.125 0 0 0-2.89-.78L8.31 9c-.95.53-1.28 1.75-.73 2.71l1.5 2.6c.55.95 1.78 1.28 2.73.73l1.88-1.08c.25.59.72 1.07 1.31 1.33V18c0 1.1.9 2 2 2h5v-2z"/>
+                        </svg>
+                        <h4 id="AppDevh4">CCTV Installation</h4>
+                        <p id="AppDevPServices">
+                            We install CCTV systems, customizing setups for clients' needs. Our experts handle site assessment, installation, and network configuration, ensuring comprehensive surveillance and security.</p>
+                    </div>
+                </div>
+            </div>
+    </section>
 
     
+    <!-- Tech Index -->
+
+        <section class="TechIndexSection">
+            <div class="container-lg my-5">
+                <div class="row justify-content-center">
+                    <div class="col-md-4 col-sm-12"> <!--Left Side-->
+                        <h5 id="TechIndex">Technology Index</h5>
+                        <h2 id="WeDeliverSol">We Deliver Solutions  
+                        with the Goal of Trusting  Workships </h2> 
+                    </div>
+
+                    <div class="col-md-4 col-sm-6"> <!-- Web Icon -->
+                        <div class="webicon">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="70" height="70" viewBox="0 0 24 24">
+                                <path fill="white" d="M16.36 14c.08-.66.14-1.32.14-2c0-.68-.06-1.34-.14-2h3.38c.16.64.26 1.31.26 2s-.1 1.36-.26 2m-5.15 5.56c.6-1.11 1.06-2.31 1.38-3.56h2.95a8.03 8.03 0 0 1-4.33 3.56M14.34 14H9.66c-.1-.66-.16-1.32-.16-2c0-.68.06-1.35.16-2h4.68c.09.65.16 1.32.16 2c0 .68-.07 1.34-.16 2M12 19.96c-.83-1.2-1.5-2.53-1.91-3.96h3.82c-.41 1.43-1.08 2.76-1.91 3.96M8 8H5.08A7.923 7.923 0 0 1 9.4 4.44C8.8 5.55 8.35 6.75 8 8m-2.92 8H8c.35 1.25.8 2.45 1.4 3.56A8.008 8.008 0 0 1 5.08 16m-.82-2C4.1 13.36 4 12.69 4 12s.1-1.36.26-2h3.38c-.08.66-.14 1.32-.14 2c0 .68.06 1.34.14 2M12 4.03c.83 1.2 1.5 2.54 1.91 3.97h-3.82c.41-1.43 1.08-2.77 1.91-3.97M18.92 8h-2.95a15.65 15.65 0 0 0-1.38-3.56c1.84.63 3.37 1.9 4.33 3.56M12 2C6.47 2 2 6.5 2 12a10 10 0 0 0 10 10a10 10 0 0 0 10-10A10 10 0 0 0 12 2"/>
+                            </svg>
+                            <p id="WebP">WEB</p>
+                        </div>
+                    </div>
+                    
+                    <div class="col-md-4 col-sm-6"> <!-- Android Icon -->
+                        <div class="androidicon">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="70" height="70" viewBox="0 0 24 24">
+                                <path fill="white" d="m14.975 3.019l.96-1.732a.193.193 0 0 0-.338-.187l-.97 1.75a6.541 6.541 0 0 0-5.253 0l-.97-1.75a.193.193 0 0 0-.34.187l.96 1.732a5.546 5.546 0 0 0-3.092 4.876h12.137a5.546 5.546 0 0 0-3.094-4.876M5.931 17.17A1.467 1.467 0 0 0 7.4 18.64h.973v3a1.36 1.36 0 1 0 2.721 0v-3h1.814v3a1.36 1.36 0 1 0 2.72 0v-3h.974a1.467 1.467 0 0 0 1.468-1.468V8.375H5.93ZM4.064 8.14a1.362 1.362 0 0 0-1.36 1.361v5.669a1.36 1.36 0 1 0 2.72 0V9.502a1.362 1.362 0 0 0-1.36-1.36Zm15.872 0a1.362 1.362 0 0 0-1.36 1.361v5.669a1.36 1.36 0 1 0 2.72 0V9.502a1.362 1.362 0 0 0-1.36-1.36Z"/>
+                                <circle cx="9.199" cy="5.168" r=".507" fill="black" opacity="0.5"/>
+                                <circle cx="14.801" cy="5.168" r=".507" fill="black" opacity="0.5"/>
+                            </svg>
+                            <p id="AndroidP">Android</p>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4 col-sm-12">
+                    </div>
+
+                    <div class="col-md-4 col-sm-6"> <!-- Windows Icon -->
+                        <div class="windows">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="61" height="61" viewBox="0 0 16 16">
+                                <path fill="white" d="M6.555 1.375L0 2.237v5.45h6.555zM0 13.795l6.555.933V8.313H0zm7.278-5.4l.026 6.378L16 16V8.395zM16 0L7.33 1.244v6.414H16z"/>
+                            </svg>
+                            <p id="windowsP">Windows</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6"> <!-- iOS Icon -->
+                        <div class="ios">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="70" height="70" viewBox="0 0 24 24">
+                                <path fill="white" d="M17.05 20.28c-.98.95-2.05.8-3.08.35c-1.09-.46-2.09-.48-3.24 0c-1.44.62-2.2.44-3.06-.35C2.79 15.25 3.51 7.59 9.05 7.31c1.35.07 2.29.74 3.08.8c1.18-.24 2.31-.93 3.57-.84c1.51.12 2.65.72 3.4 1.8c-3.12 1.87-2.38 5.98.48 7.13c-.57 1.5-1.31 2.99-2.54 4.09zM12.03 7.25c-.15-2.23 1.66-4.07 3.74-4.25c.29 2.58-2.34 4.5-3.74 4.25"/>
+                            </svg>
+                            <p id="iOS">iOS</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
 </body>
 </html>
