--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <link rel="stylesheet" href="about.css">
         <link rel="stylesheet" href="system-responsive.css">
         <link rel="stylesheet" href="services.css">
+        <link rel="stylesheet" href="contact.css">
+        
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     </head>
 
@@ -381,6 +383,163 @@
                 </div>
             </div>
         </section>
+
+    <!-- Get in Touch -->
+
+    <section class="GetInTouchSection pt-5">
+        <div class="container-lg my-5">
+            <div class="row justify-content-center">
+                <div class="col-md-12 text-center" id="RectangleContactID">
+                    <h1 id="GetInTouch">GET IN TOUCH</h1>
+                    <p id="WeHaveManyReviewsGIT">We Have Many Reviews From Our Satisfied Clients. </p>
+                    <p id="MonthlyProjects">For general enquiries you can email or call us
+                        at support@etrphils.com / call + 786 875 864 75
+                    </p>
+                </div>
+            </div>
+        </div>
+<div class="container-lg my-5">
+    <div class="row justify-content-center">
+        <div class="col-md-4 col-sm-4">
+            <div class="RectangleContactID">
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="black" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                    <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10m0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6"/>
+                </svg>
+                <div class="text-content"> <h4 id="ContactID">Address</h4>
+                    <p id="ContactAddressDesc">Bay 16, Cervantes Compound, KM 17 West Service Road, Parañaque City</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 col-sm-4">
+            <div class="RectangleContactID">
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="black" class="bi bi-telephone-fill" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z"/>
+                </svg>
+                <div class="text-content"> <h4 id="PhoneID">Phone</h4>
+                    <p id="PhoneDesc">+ 786 875 864</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 col-sm-4">
+            <div class="RectangleContactID">
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="black" class="bi bi-envelope-fill" viewBox="0 0 16 16">
+                    <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414zM0 4.697v7.104l5.803-3.558zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586zm3.436-.586L16 11.801V4.697z"/>
+                </svg>
+                <div class="text-content"> <h4 id="Email">Email</h4>
+                    <p id="EmailDesc">support@etrphils.com</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-12 text-center">
+                <p id="GetInTouchText">We are located at Bay 16, Cervantes Compound, KM 17 West Service Road, Parañaque City</p>
+            </div>
+
+            <!-- MAP -->
+            
+            <div class="col-md-12 col-sm-12 col-xs-12">
+                <div class="map-area">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d641.3084507768576!2d121.04402013598586!3d14.470582789626325!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTTCsDI4JzE0LjAiTiAxMjHCsDAyJzM4LjYiRQ!5e0!3m2!1sen!2sph!4v1712131642501!5m2!1sen!2sph" 
+                    width="1300" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
+                </div>
+            </div>
+    </div>
+</div>
+</section>
+
+    <!-- Send your messages -->
+
+    <section class="SendMessage">
+        <div class="container-lg my-5">
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <p id="SendYourMessage">SEND YOUR MESSAGE</p>
+                    <h2 id="SendYourMessageH2">SEND YOUR MESSAGE</h2>
+                </div>
+                <div class="col-md-6">
+                    <p id="SendYourMessageR">Our goal is to help our companies maintain or achieve best - in - class
+                        positions in their respective industries and our teams works.
+                    </p>
+                </div>
+                <div class="col-md-6 col-sm-12">
+                    <label for="DataList" class="form-label" id="ContactUsLabels">Your Name</label>
+                    <input class="form-control" id="DataList" placeholder="Name">
+                    <hr id="linebreak">
+                </div>
+                <div class="col-md-6 col-sm-12">
+                    <label for="DataList" class="form-label" id="ContactUsLabels">Email Address</label>
+                    <input class="form-control" id="DataList" placeholder="Email Address">
+                    <hr id="linebreak">
+                </div>
+                <div class="col-md-6 col-sm-12">
+                    <label for="DataList" class="form-label" id="ContactUsLabels">Phone Number</label>
+                    <input class="form-control" id="DataList" placeholder="Phone Number" type="number">
+                    <hr id="linebreak">
+                </div>
+                <div class="col-md-6 col-sm-12">
+                    <label for="DataList" class="form-label" id="ContactUsLabels1">Website</label>
+                    <input class="form-control" id="DataList" placeholder="Website">
+                    <hr id="linebreak">
+                </div>
+
+                <div class="col-md-12 col-sm-12">
+                    <label for="ControlTextArea1" class="form-label" id="ContactUsLabels">Your Message</label>
+                    <textarea class="form-control" id="ControlTextArea1" rows="5"></textarea>
+                </div>
+
+                <div class="text-center">
+                    <button type="button btn-2" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal" id="ContactUsBTNLM">
+                        Submit
+                    </button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Quick Links -->
+
+    <section class="QuickLinks">
+        <div class="container-lg my-5">
+            <div class="row">
+                <div class="col-md-2 col-sm-2">
+                    <p id="QuickLinks">Quick Links</p>
+                    <div class="custome-line">.</div>
+                </div>
+
+                <div class="col-md-6 col-sm-6">
+                    <div class="AddressIcon">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                            <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10m0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6"/>
+                        </svg>
+                    </div>
+                    <h4 id="ContactQL">Address</h4>
+                    <p id="ContactAddressQL">Bay 16, Cervantes Compound, KM 17 West Service Road, Parañaque City </p>
+                </div>
+
+                <div class="col-md-2 col-sm-2">
+                    <div class="PhoneIcon">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" class="bi bi-telephone-fill" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z"/>
+                        </svg>
+                    </div>
+                    <h4 id="PhoneQL">Phone</h4>
+                    <p id="PhonePQL">+ 786 875 864 75</p>
+                </div>
+
+                <div class="col-md-2 col-sm-2">
+                    <div class="EmailIcon">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" class="bi bi-envelope-fill" viewBox="0 0 16 16">
+                            <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414zM0 4.697v7.104l5.803-3.558zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586zm3.436-.586L16 11.801V4.697z"/>
+                        </svg>
+                    </div>
+                    <h4 id="EmailQL">Email</h4>
+                    <p id="EmailPQL">support@etrphils.com</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 
 </body>
 </html>
