--- a/index.html
+++ b/index.html
@@ -491,6 +491,7 @@
                     <button type="button btn-2" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal" id="ContactUsBTNLM">
                         Submit
                     </button>
+
                 </div>
             </div>
         </div>
@@ -506,14 +507,15 @@
                     <div class="custome-line">.</div>
                 </div>
 
-                <div class="col-md-6 col-sm-6">
-                    <div class="AddressIcon">
+                <div class="col-md-6 col-sm-6 d-flex justify-content-center"> <div class="AddressIcon">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
                             <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10m0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6"/>
                         </svg>
+                        <div class="address-text-content">
+                            <h4 id="ContactQL">Address</h4>
+                            <p id="ContactAddressQL">Bay 16, Cervantes Compound, KM 17 West Service Road, Parañaque City </p>
+                        </div>
                     </div>
-                    <h4 id="ContactQL">Address</h4>
-                    <p id="ContactAddressQL">Bay 16, Cervantes Compound, KM 17 West Service Road, Parañaque City </p>
                 </div>
 
                 <div class="col-md-2 col-sm-2">
