--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@
                             <path fill="black" d="M17 6a6 6 0 1 0 6 6a6 6 0 0 0-6-6m0 7.5a1.5 1.5 0 1 1 1.5-1.5a1.5 1.5 0 0 1-1.5 1.5"/>
                         </svg>
                         <h4 id="AppDevh4">Software Services</h4>
-                        <p id="AppDevPServices">We specialize in crafting customized solutions to address the unique needs of businesses, enhancing both efficiency and functionality. 
-                            Our approach focuses on streamlining processes, optimizing productivity, and empowering our clients to achieve their distinct objectives effectively.</p>
+                        <p id="AppDevPServices">We specialize in crafting customized solutions for businesses, enhancing both efficiency and functionality. Our approach focuses on streamlining processes, optimizing productivity, 
+                            and empowering clients to achieve their distinct objectives.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6">
@@ -279,8 +279,8 @@
                             <path fill="currentcolor" stroke="black" stroke-width="2" d="M6 9a3 3 0 1 0 0-6a3 3 0 0 0 0 6Zm0-6V0m0 12V9M0 6h3m6 0h3M2 2l2 2m4 4l2 2m0-8L8 4M4 8l-2 2m16 2a3 3 0 1 0 0-6a3 3 0 0 0 0 6Zm0-6V3m0 12v-3m-6-3h3m6 0h3M14 5l2 2m4 4l2 2m0-8l-2 2m-4 4l-2 2m-5 8a3 3 0 1 0 0-6a3 3 0 0 0 0 6Zm0-6v-3m0 12v-3m-6-3h3m6 0h3M5 14l2 2m4 4l2 2m0-8l-2 2m-4 4l-2 2"/>
                         </svg>
                         <h4 id="AppDevh4">Technical Services</h4>
-                        <p id="AppDevPServices">We offer expert support for a variety of technological needs, such as IT assistance, system maintenance, and troubleshooting. 
-                            Our skilled technicians prioritize providing prompt and reliable solutions to ensure that our clients' systems run smoothly and securely.
+                        <p id="AppDevPServices">We offer expert support for technological needs, such as IT assistance, system maintenance, and troubleshooting. Our skilled technicians prioritize prompt, 
+                            reliable solutions to ensure clients' systems run smoothly and securely.
                         </p>
                     </div>
                 </div>
