--- a/index.html
+++ b/index.html
@@ -58,11 +58,9 @@
                 <div class="caption-flex-container">
                     <div class="caption-text-content">
                         <h5 id="CarETRIS1">ETR Integrated System</h5>
-                        <h5 id="CarETRIS">Inventory, Sales, Accounting, and Distribution System</h5>
-                        <p id="CarETRISP"> A unified platform that streamlines enterprise resource planning by integrating finance,
-                            HR, supply chain, and customer management. It enhances efficiency, real-time collaboration,
-                            and decision-making through advanced analytics and automation, adaptable for various industries
-                            and scalable for any business size.
+                        <h5 id="CarETRIS">Comprehensive ERP for Manufacturing & Distribution</h5>
+                        <p id="CarETRISP"> ETR-IS is a flexible, integrated ERP solution for small to mid-market manufacturers and distributors, streamlining core operations like sales, inventory, warehouse, finance, call coverage, 
+                            and business intelligence within a single platform to boost efficiency and competitive advantage.
                         </p>
                         <div class="slider-btn">
                             <a href="#SoftwarePackages" class="nav-link" id="ETRBSB">
