adjust the carousel section and add product descriptions

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                     <div class="caption-text-content">
                         <h5 id="CarSPMS1">SPMS</h5>
                         <h5 id="CarSPMS">Sales Performance Management System</h5>
-                        <p id="CarSPMSP">A robust platform that enhances sales effectiveness by tracking, analyzing, and optimizing sales activities.
-                            It provides tools for performance measurement, goal setting, incentive management, and real-time reporting,
-                            helping businesses boost productivity, streamline processes, and achieve sales targets more efficiently.</p>
+                        <p id="CarSPMSP">Your go-to solution for fast, efficient sales data integration. Unify reports from multiple distributors and gain a clear, consolidated view of your sales performance. 
+                            Built for flexibility, it adapts to your territorial setup, delivering tailored insights with ease. With comprehensive reporting tools, 
+                            you can effortlessly track salesforce productivity, customer engagement, and product performance—all in one place.</p>
                         <div class="slider-btn">
                             <a href="#SoftwarePackages" class="nav-link" id="ETRBSB-SPMS"> <!-- Consider unique IDs if needed or use classes -->
                                 <button class="btn btn-1" type="button">Learn More</button>
@@ -106,10 +106,10 @@
                 <div class="caption-flex-container">
                     <div class="caption-text-content">
                         <h5 id="CarSPMS1">ETR Analytics</h5>
-                        <h5 id="CarSPMS">Integrated Finance, HR & Operations Analytics</h5>
-                        <p id="CarSPMSP">Bringing your core business functions together—finance, HR, supply chain, and customer management—ETR 
-                            Analytics empowers teams to work smarter and faster. With intelligent analysis, real-time insights, and flexible tools that adapt to any industry, 
-                            it’s the scalable solution designed to grow with your business and drive better collaboration across every department.</p>
+                        <h5 id="CarSPMS">Real-Time Dashboards & Cloud-Based Sales Monitoring</h5>
+                        <p id="CarSPMSP">Take sales monitoring to the next level with powerful data visualization tools. Real-time dashboards highlight key trends and performance metrics to guide smarter decisions. 
+                            Fully cloud-based, it ensures your sales team and managers have secure access to critical data—anytime, anywhere. 
+                            Stay connected and in control, wherever business takes you.</p>
                         <div class="slider-btn">
                             <a href="#SoftwarePackages" class="nav-link" id="ETRBSB-ETRB"> <!-- Consider unique IDs if needed or use classes -->
                                 <button class="btn btn-1" type="button">Learn More</button>
@@ -131,8 +131,9 @@
                     <div class="caption-text-content">
                         <h5 id="CarPOS1">POS</h5>
                         <h5 id="CarPOS">Point of Sales System</h5>
-                        <p id="CarPOSP">A comprehensive solution that manages retail transactions by processing sales, tracking inventory, and generating receipts. It integrates with payment gateways, 
-                            supports various payment methods, and provides real-time analytics to help businesses streamline operations and improve customer service.</p>
+                        <p id="CarPOSP">A client-server POS system for seamless sales and inventory management. Manage transactions, track stock, and generate real-time reports—all in one platform. 
+                            With secure, user-specific access and support for single or multi-branch setups, 
+                            it ensures accuracy, accountability, and full control over your operations.</p>
                         <div class="slider-btn">
                             <a href="#SoftwarePackages" class="nav-link" id="ETRBSB-POS"> <!-- Consider unique IDs if needed or use classes -->
                                 <button class="btn btn-1" type="button">Learn More</button>
@@ -204,17 +205,17 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="Group1">
                         <i class="bi bi-terminal" id="ETRBS"></i>
-                        <h4 id="DCM">ETR Field Force</h4>
-                        <p id="DCMP">A complete software solution that combines finance, HR, supply chain, and customer management to improve how businesses work. 
-                            It helps them share information better, make smarter decisions, and can be adjusted to fit different industries.</p>
+                        <h4 id="DCM">ETR Integrated System</h4>
+                        <p id="DCMP">A fully integrated ERP for end-to-end distribution. Manage warehouse operations, track inventory, process orders, generate invoices, and handle receivables—all in one system. 
+                            With real-time data and GL integration, ETR-IS simplifies workflows, ensures accuracy, and keeps departments in sync.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <div class="Group1">
                         <i class="bi bi-code-square" id="ETRBS"></i>
                         <h4 id="ETRIS">ETR Analytics</h4>
-                        <p id="ETRSP">Brings together finance, HR, supply chain, and customer management to work better together, saving time and improving teamwork. 
-                            With smart analysis and flexible options, it fits any industry and grows with your business.
+                        <p id="ETRSP">Delivers real-time dashboards and insights to improve sales, streamline operations, and drive growth. Designed for flexibility and scale, it integrates smoothly with your systems, 
+                            adapts to any industry, and gives your team instant access to key metrics—anytime, anywhere. 
                         </p>
                     </div>
                 </div>
@@ -222,8 +223,7 @@
                     <div class="Group1">
                         <i class="bi bi-phone" id="ETRBS"></i>
                         <h4 id="SPMS">SPMS</h4>
-                        <p id="SPMSP">Boosts sales by keeping track of what works best and rewarding good performance. 
-                            It makes selling easier by setting goals, measuring progress, and showing results instantly, helping businesses hit their sales goals faster.
+                        <p id="SPMSP">A system for fast, efficient sales data integration. It consolidates reports from multiple distributors to provide a unified view of sales performance. The system adapts to your territory and generates tailored insights. It includes tools to track salesforce productivity, engagement, and product performance in one platform.
                         </p>
                     </div>
                 </div>
@@ -231,8 +231,7 @@
                     <div class="Group1">
                         <i class="bi bi-card-text" id="ETRBS"></i>
                         <h4 id="POS">POS</h4>
-                        <p id="POSP">Handles sales, inventory, and payments smoothly, making customers happy and work easier. 
-                            It connects with different payment methods and shows instant sales info, helping businesses work better and make more money.
+                        <p id="POSP">A client-server-based, integrated sales and inventory management system tailored for Philippine business environments. Our POS is an all-in-one solution designed to streamline operations, monitor inventory movement, and provide real-time sales tracking — ensuring you always have a clear picture of your business performance.
                         </p>
                     </div>
                 </div>
@@ -240,8 +239,7 @@
                     <div class="Group1">
                         <i class="bi bi-braces" id="ETRBS"></i>
                         <h4 id="CS">Customized Software</h4>
-                        <p id="CSP">Customized for your business, these solutions give you what you need, when you need it. 
-                            They help you work better, save time, and do things your way, even when standard software can't.
+                        <p id="CSP">Built around you. Our custom software solutions adapt to how you work—not the other way around. Whether off-the-shelf tools fall short or your process is unique, we tailor systems that save time, reduce hassle, and help you focus on what matters most.
                         </p>
                     </div>
                 </div>
@@ -449,7 +447,7 @@
         <div class="container-lg my-5">
             <div class="row justify-content-center">
                 <div class="col-md-6">
-                    <p id="SendYourMessage">SEND YOUR MESSAGE</p>
+                    <p id="SendYourMessage">Reach Out to Us</p>
                     <h2 id="SendYourMessageH2">SEND YOUR MESSAGE</h2>
                 </div>
                 <div class="col-md-6">
