font-family adjusted

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="Group1">
                         <i class="bi bi-code-square" id="ETRBS"></i>
-                        <h4 id="ETRIS">ETR Analytics</h4>
+                        <h4 id="DCM">ETR Analytics</h4>
                         <p id="ETRSP">Delivers real-time dashboards and insights to improve sales, streamline operations, and drive growth. Designed for flexibility and scale, it integrates smoothly with your systems, 
                             adapts to any industry, and gives your team instant access to key metrics—anytime, anywhere. 
                         </p>
@@ -222,7 +222,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="Group1">
                         <i class="bi bi-phone" id="ETRBS"></i>
-                        <h4 id="SPMS">SPMS</h4>
+                        <h4 id="DCM">SPMS</h4>
                         <p id="SPMSP">A system for fast, efficient sales data integration. It consolidates reports from multiple distributors to provide a unified view of sales performance. The system adapts to your territory and generates tailored insights. It includes tools to track salesforce productivity, engagement, and product performance in one platform.
                         </p>
                     </div>
@@ -230,7 +230,7 @@
                 <div class="col-md-4 col-sm-6" >
                     <div class="Group1">
                         <i class="bi bi-card-text" id="ETRBS"></i>
-                        <h4 id="POS">POS</h4>
+                        <h4 id="DCM">POS</h4>
                         <p id="POSP">A client-server-based, integrated sales and inventory management system tailored for Philippine business environments. Our POS is an all-in-one solution designed to streamline operations, monitor inventory movement, and provide real-time sales tracking — ensuring you always have a clear picture of your business performance.
                         </p>
                     </div>
@@ -238,7 +238,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="Group1">
                         <i class="bi bi-braces" id="ETRBS"></i>
-                        <h4 id="CS">Customized Software</h4>
+                        <h4 id="DCM">Customized Software</h4>
                         <p id="CSP">Built around you. Our custom software solutions adapt to how you work—not the other way around. Whether off-the-shelf tools fall short or your process is unique, we tailor systems that save time, reduce hassle, and help you focus on what matters most.
                         </p>
                     </div>
