adjust active carousel

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
             <div class="carousel-caption">
                 <div class="caption-flex-container">
                     <div class="caption-text-content">
-                        <h5 id="CarETRIS1">ETR Field Force</h5>
-                        <h5 id="CarETRIS">Smarter CRM for Seamless Field Execution</h5>
-                        <p id="CarETRISP"> A dynamic CRM solution that strengthens client relationships by giving full visibility into customer interactions, agent visits, product demonstrations, and on-site inventory. 
+                        <h5 id="CarETRFF1">ETR Field Force</h5>
+                        <h5 id="CarETRFF">Smarter CRM for Seamless Field Execution</h5>
+                        <p id="CarETRFFP"> A dynamic CRM solution that strengthens client relationships by giving full visibility into customer interactions, agent visits, product demonstrations, and on-site inventory. 
                             It enables teams to monitor accounts in real time, streamline field operations, and ensure every customer touchpoint is productive and informed—driving better engagement, accountability, and sales results.
                         </p>
                         <div class="slider-btn">
@@ -103,7 +103,7 @@
             </div>
         </div>        
 
-        <div class="carousel-item active carousel-background-image" style="background-color: #1e4590;">
+        <div class="carousel-item carousel-background-image" style="background-color: #1e4590;">
             <div class="carousel-caption">
                 <div class="caption-flex-container">
                     <div class="caption-text-content">
@@ -521,7 +521,6 @@
                     <button type="button btn-2" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal" id="ContactUsBTNLM">
                         Submit
                     </button>
-
                 </div>
             </div>
         </div>
