changes of images and colors

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <h5 id="AboutCompHeader" style="color: #E8AB42;">ABOUT OUR COMPANY</h5>
             <h2 id="AboutCompHeader2">ETR Total Business Solutions Provider</h2>
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-7">
                     <p id="WeAtETRP">ETR Total Business Solutions Provider started 15th of April, 2006. Although the company is relatively
                         new in formalizing a computing business services outfit, the core team is composed of highly proficient young professionals
                         expert in the field of information technology. Making the transition from individual talents fusing into one dynamic team that
@@ -204,15 +204,16 @@
                         operations enabling the development of manufacturing, accounting and sales crediting system and beyond that, to doctor-call-monitoring system,
                         providing that throughout the years the expansion of ETR Total Business Solutions Provider surpassed the projected timeline of offering new products
                         and services nationwide and in the international market.
+                        <br><br>
+                        ETR's support and maintenance services are aimed at 100% availability. This is clearly shown in our flexibility to attend to customer at any time
+                to meet customer satisfaction.
                     </p>
                 </div>
-                <div class="col-md-6" id="ETRTeam">
-                    <img src="CompanyPIC.png" class="img-fluid" alt="Image" style="max-width: 100%;">
+                <div class="col-md-5" id="ETRTeam">
+                    <img src="Company.png" class="img-fluid" alt="Image" style="max-width: 100%;">
                 </div>
             </div>
-            <p id="WeAtETRP">ETR's support and maintenance services are aimed at 100% availability. This is clearly shown in our flexibility to attend to customer at any time
-                to meet customer satisfaction.
-                <br><br>
+            <p id="WeAtETRP">
                 We at ETR aim to establish long term relationship with our clients by understanding their business needs and providing cost-effective solution by giving 
                 them niformation at hand to make their operation more efficient.
                 <br><br>
@@ -531,9 +532,15 @@
     <section class="QuickLinks">
         <div class="container-lg my-5">
             <div class="row">
-                <div class="col-md-2 col-sm-2">
-                    <p id="QuickLinks">Quick Links</p>
+                <!-- <div class="col-md-2 col-sm-2">
+                    <p id="QuickLinks">MTLSI Website </p>
                     <div class="custome-line">.</div>
+                </div> -->
+
+                <div class="col-md-2 col-sm-2">
+                    <a href="https://www.facebook.com/p/Masigasig-Transport-and-Logistics-Solutions-Inc-100057282286502/" target="_blank"
+                     id="QuickLinks">MTLSI Website</a>
+                        <div class="custome-line">.</div>
                 </div>
 
                 <div class="col-md-6 col-sm-6 d-flex justify-content-center"> <div class="AddressIcon">
@@ -554,7 +561,7 @@
                         </svg>
                     </div>
                     <h4 id="PhoneQL">Phone</h4>
-                    <p id="PhonePQL">+ 786 875 864 75</p>
+                    <p id="PhonePQL">+ 02 8330 7016</p>
                 </div>
 
                 <div class="col-md-2 col-sm-2">
