--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
                     <p id="SendYourMessage">Reach Out to Us</p>
                     <h2 id="SendYourMessageH2">SEND YOUR MESSAGE</h2>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 col-sm-12">
                     <p id="SendYourMessageR">Our goal is to help our companies maintain or achieve best - in - class
                         positions in their respective industries and our teams works.
                     </p>
